# python-ci

./: pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
src/python_ci/: __init__.py
tests/python_ci/: test_init.py
